chore: prepare for tomorrow

--- a/beamerthemeAMSBolognaFC.sty
+++ b/beamerthemeAMSBolognaFC.sty
@@ -11,7 +11,7 @@
 %%% TO UNCOMMENT FOR LOCAL DIR
 \usecolortheme{bolognafc}
 %% Alma Logo
-\pgfdeclareimage[height=.97\paperheight]{bg}{img/almacesena-background}
+\pgfdeclareimage[width=1.1\textwidth]{bg}{img/almacesena-background}
 %\pgfdeclareimage[width=\paperwidth]{bg}{img/almacesena-background}
 \setbeamertemplate{background}{\pgfuseimage{bg}}
 % text
