chore: discussion on macro swarm

--- a/presentation-common-wears-2024.tex
+++ b/presentation-common-wears-2024.tex
@@ -268,7 +268,19 @@
 	\end{exampleblock}
 \end{frame}
 \begin{frame}{API for Swarm behaviours: MacroSwarm}
-
+	\begin{alertblock}{Swarm behaviours}
+		A \emph{swarm behavior} is a \emph{collective} behavior that emerges from the interaction of a large number of agents.
+	\end{alertblock}
+	\begin{exampleblock}{Common-wears POV}
+		Several common-wears scenarios can be modeled as swarm behaviors \faArrowRight \, we need a \bold{standard} way to express them.
+	\end{exampleblock}
+	\begin{exampleblock}{MacroSwarm}
+		\begin{itemize}
+			\item A Scala library for aggregate computing
+			\item It is based on the concept of \emph{swarm behaviors}
+			\item It provides a set of \emph{swarm behaviors} that can be used to model common-wears scenarios
+		\end{itemize}
+	\end{exampleblock}
 \end{frame}
 \begin{frame}{Simplify the development of aggregate script: \bold{Visual ScaFi}}
 	\begin{alertblock}{Visual programming}
